--- a/main.css
+++ b/main.css
@@ -7,6 +7,12 @@ body{
    
 
 }
+.logo{
+    width: 22rem;
+}
+.avatar{
+    height: 3rem;
+}
 .main{
     display: flex;
 }
@@ -63,4 +69,58 @@ li:hover{
     height: 3rem;
   
 
+}
+/*MODE TABLETTE_____side-bar___________>>>>>>>>________nav-bar___________*/
+
+
+@media screen and (max-width: 768px) {
+  span{
+    display: none;
+  }
+  .logo{
+    display: none !important;
+  }
+  li:hover{
+    background-color: #c0e2ea;
+    width: 2rem;
+    border-radius: 10px;
+    height: 2rem;
+    padding: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-items{
+    width: 40.5rem;
+    height: 4rem;
+    background-color: white;
+    position: absolute;
+    left: 7rem;  
+}
+.side-container{
+    height: 100vh;
+    width: 6rem;
+    background-color: white;
+    position: fixed;
+   
+}
+.side-list{
+    margin-top: 4rem;
+}
+    
+}
+/*________MOBILE_________>>>>>>>MOBILE*/
+
+@media screen and (max-width:375px) {
+
+    .side-container{
+        display: none;
+}
+.nav-items{
+    width: 22rem;
+    height: 4rem;
+    background-color: white;
+    position: absolute;
+    left: 1rem;  
+}
 }
